<resources>
    <string name="app_name">FoxOpen</string>
    <string name="brand_name">数狐精读</string>
    <string name="topA">文章排行</string>
    <string name="value_a">欢迎大家参加数狐精讲</string>
    <string name="button_go">继续</string>
    <string name="button_example_alist">基础组件演示</string>
    <string name="text_aDemo">用户密码</string>
    <string name="text_bDemo">微信验证码</string>
    <!-- names -->
    <string-array name="titleList">
        <item>中国人民站起来了，高兴起来吧！</item>
        <item>最新通知，请大家仔细听好了，成功！</item>

    </string-array>

    <!-- pics -->
    <array name="pics">
        <item>@drawable/ffa</item>
        <item>@drawable/uk</item>
    </array>
</resources>
