<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uk"
    tools:context="com.idatafox.foxopen.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="381dp"
        android:layout_height="78dp"
        android:layout_marginTop="39dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:gravity="center"
        android:text="@string/value_a"
        android:shadowColor="@android:color/holo_red_dark"
        android:shadowDx="4"
        android:shadowDy="-4"
        android:shadowRadius="1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="2dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="383dp"
        android:layout_height="91dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="32dp"
        android:background="#ccc"
        android:gravity="center"
        android:shadowColor="@android:color/holo_red_dark"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:text="@string/brand_name"
        android:textAlignment="gravity"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <LinearLayout
        android:id="@+id/hela"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="62dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.777">
   <!--  android:theme="@style/EditTextHint"      android:background="@drawable/mystyle"-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:textColorHint="@color/colorFonta"
            app:hintTextAppearance="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="用户名"
                android:gravity="center"
                android:background="@drawable/mystyle"
                android:inputType="textPersonName"
                android:text="" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColorHint="@color/colorFonta"
            app:hintTextAppearance="@style/EditTextHint"
            app:errorTextAppearance="@style/EditTextHint"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_aDemo"

                android:text=""
                android:textAlignment="center"
                android:textCursorDrawable="@color/colorFonta"
                android:textColor="@color/colorFonta"
                android:gravity="center|center_horizontal|center_vertical|top"
                android:background="@drawable/mystyle"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/weixincode"
            android:textColorHint="@color/colorFonta"
            app:hintTextAppearance="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_bDemo"
            android:gravity="center"
            android:background="@drawable/mystyle"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="111dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/button_go"
        android:onClick="openNewWin"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="239dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteY="503dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="240dp"
        android:text="test"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintLeft_toRightOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>
